[gd_scene load_steps=7 format=3 uid="uid://dq8nrv5um4hy1"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_722wd"]
[ext_resource type="Texture2D" uid="uid://b2hnyjxrt4tcl" path="res://Assets/Sprites/background1.png" id="2_sabc2"]
[ext_resource type="PackedScene" uid="uid://c4ak3ly5n4yiy" path="res://Scenes/Options_Menu.tscn" id="3_1ym4x"]
[ext_resource type="Texture2D" uid="uid://dkb3x83lhud3x" path="res://Assets/Sprites/background2_elements/orange_nebula_1.png" id="4_4jk5a"]
[ext_resource type="Texture2D" uid="uid://b22w6a605iysh" path="res://Assets/Sprites/background2_elements/star_big_1.png" id="5_27jaw"]
[ext_resource type="Texture2D" uid="uid://bys4g5x0i68tt" path="res://Assets/Sprites/background2_elements/purple_nebula_1.png" id="5_afuc4"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_722wd")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 0.05)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(988, 503)
scale = Vector2(1.03814, 1.03841)
texture = ExtResource("2_sabc2")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.1)

[node name="Background2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(988, 503)
scale = Vector2(1.43644, 1.50732)
texture = ExtResource("4_4jk5a")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)

[node name="Background2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(988, 503)
scale = Vector2(1.5, 1.55976)
texture = ExtResource("5_afuc4")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.3, 0.3)

[node name="Background2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(988, 503)
scale = Vector2(1.41864, 1.1061)
texture = ExtResource("5_27jaw")

[node name="OptionsMenu" parent="." instance=ExtResource("3_1ym4x")]
visible = false
layout_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -96.0
offset_right = 149.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "PLAY"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "OPTIONS"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
